// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A Chord Progression test suite should generate chords based on a movement timeline - free rhythm 1`] = `
Array [
  Object {
    "chord": Array [
      69,
      73,
      76,
    ],
    "chordName": "Amaj",
    "dur": 960,
    "isRest": false,
    "next": 960,
    "time": 0,
  },
  Object {
    "chord": Array [
      69,
      73,
      76,
    ],
    "chordName": "Amaj",
    "dur": 480,
    "isRest": false,
    "next": 1440,
    "time": 960,
  },
  Object {
    "chord": Array [
      66,
      68,
      71,
      73,
      74,
      76,
    ],
    "chordName": "C#m7add11",
    "dur": 960,
    "isRest": false,
    "next": 2400,
    "time": 1440,
  },
  Object {
    "chord": Array [
      66,
      68,
      71,
      73,
      74,
      76,
    ],
    "chordName": "C#m7add11",
    "dur": 480,
    "isRest": false,
    "next": 2880,
    "time": 2400,
  },
  Object {
    "chord": Array [
      66,
      69,
      71,
      74,
    ],
    "chordName": "D6",
    "dur": 480,
    "isRest": false,
    "next": 3360,
    "time": 2880,
  },
  Object {
    "chord": Array [
      66,
      69,
      71,
      74,
    ],
    "chordName": "D6",
    "dur": 480,
    "isRest": false,
    "next": 3840,
    "time": 3360,
  },
  Object {
    "chord": Array [
      66,
      70,
      73,
      75,
    ],
    "chordName": "F#6",
    "dur": 480,
    "isRest": false,
    "next": 4320,
    "time": 3840,
  },
  Object {
    "chord": Array [
      66,
      70,
      73,
      75,
    ],
    "chordName": "F#6",
    "dur": 480,
    "isRest": false,
    "next": 4800,
    "time": 4320,
  },
  Object {
    "chord": Array [
      66,
      70,
      73,
      75,
    ],
    "chordName": "F#6",
    "dur": 480,
    "isRest": false,
    "next": 5280,
    "time": 4800,
  },
  Object {
    "chord": Array [
      69,
      81,
      76,
    ],
    "chordName": "A5",
    "dur": 960,
    "isRest": false,
    "next": 6240,
    "time": 5280,
  },
  Object {
    "chord": Array [
      69,
      81,
      76,
    ],
    "chordName": "A5",
    "dur": 480,
    "isRest": false,
    "next": 6720,
    "time": 6240,
  },
  Object {
    "chord": Array [
      69,
      75,
      76,
    ],
    "chordName": "",
    "dur": 640,
    "isRest": false,
    "next": 7360,
    "time": 6720,
  },
  Object {
    "chord": Array [
      69,
      75,
      76,
    ],
    "chordName": "",
    "dur": 320,
    "isRest": false,
    "next": 7680,
    "time": 7360,
  },
]
`;

exports[`A Chord Progression test suite should generate chords based on a movement timeline - turn rhythm 1`] = `
Array [
  Object {
    "chord": Array [
      69,
      73,
      76,
    ],
    "chordName": "Amaj",
    "dur": 240,
    "isRest": false,
    "next": 240,
    "time": 0,
  },
  Object {
    "chord": Array [
      69,
      73,
      76,
    ],
    "chordName": "Amaj",
    "dur": 240,
    "isRest": false,
    "next": 480,
    "time": 240,
  },
  Object {
    "chord": Array [
      69,
      73,
      76,
    ],
    "chordName": "Amaj",
    "dur": 240,
    "isRest": false,
    "next": 720,
    "time": 480,
  },
  Object {
    "chord": Array [
      69,
      73,
      76,
    ],
    "chordName": "Amaj",
    "dur": 720,
    "isRest": false,
    "next": 1440,
    "time": 720,
  },
  Object {
    "chord": Array [
      68,
      73,
      78,
    ],
    "chordName": "C#sus4",
    "dur": 160,
    "isRest": false,
    "next": 1600,
    "time": 1440,
  },
  Object {
    "chord": Array [
      68,
      73,
      78,
    ],
    "chordName": "C#sus4",
    "dur": 80,
    "isRest": false,
    "next": 1680,
    "time": 1600,
  },
  Object {
    "chord": Array [],
    "chordName": "",
    "dur": 80,
    "isRest": true,
    "next": 1760,
    "time": 1680,
  },
  Object {
    "chord": Array [
      68,
      73,
      78,
    ],
    "chordName": "C#sus4",
    "dur": 1120,
    "isRest": false,
    "next": 2880,
    "time": 1760,
  },
  Object {
    "chord": Array [],
    "chordName": "",
    "dur": 160,
    "isRest": true,
    "next": 3040,
    "time": 2880,
  },
  Object {
    "chord": Array [
      69,
      74,
      78,
    ],
    "chordName": "Dmaj",
    "dur": 320,
    "isRest": false,
    "next": 3360,
    "time": 3040,
  },
  Object {
    "chord": Array [
      69,
      74,
      78,
    ],
    "chordName": "Dmaj",
    "dur": 480,
    "isRest": false,
    "next": 3840,
    "time": 3360,
  },
  Object {
    "chord": Array [
      70,
      73,
      75,
      78,
    ],
    "chordName": "F#6",
    "dur": 320,
    "isRest": false,
    "next": 4160,
    "time": 3840,
  },
  Object {
    "chord": Array [],
    "chordName": "",
    "dur": 480,
    "isRest": true,
    "next": 4640,
    "time": 4160,
  },
  Object {
    "chord": Array [
      70,
      73,
      75,
      78,
    ],
    "chordName": "F#6",
    "dur": 320,
    "isRest": false,
    "next": 4960,
    "time": 4640,
  },
  Object {
    "chord": Array [
      70,
      73,
      75,
      78,
    ],
    "chordName": "F#6",
    "dur": 160,
    "isRest": false,
    "next": 5280,
    "time": 4960,
  },
  Object {
    "chord": Array [
      69,
      76,
    ],
    "chordName": "A5",
    "dur": 320,
    "isRest": false,
    "next": 5600,
    "time": 5280,
  },
  Object {
    "chord": Array [
      69,
      76,
    ],
    "chordName": "A5",
    "dur": 480,
    "isRest": false,
    "next": 6080,
    "time": 5600,
  },
  Object {
    "chord": Array [],
    "chordName": "",
    "dur": 480,
    "isRest": true,
    "next": 6560,
    "time": 6080,
  },
  Object {
    "chord": Array [
      69,
      76,
    ],
    "chordName": "A5",
    "dur": 160,
    "isRest": false,
    "next": 6720,
    "time": 6560,
  },
  Object {
    "chord": Array [
      63,
      71,
      66,
      69,
    ],
    "chordName": "D#dimadd6",
    "dur": 240,
    "isRest": false,
    "next": 6960,
    "time": 6720,
  },
  Object {
    "chord": Array [
      63,
      71,
      66,
      69,
    ],
    "chordName": "D#dimadd6",
    "dur": 240,
    "isRest": false,
    "next": 7200,
    "time": 6960,
  },
  Object {
    "chord": Array [
      63,
      71,
      66,
      69,
    ],
    "chordName": "D#dimadd6",
    "dur": 480,
    "isRest": false,
    "next": 7680,
    "time": 7200,
  },
]
`;

exports[`A Chord Progression test suite should generate progression with defined structures 1`] = `
Array [
  Object {
    "chord": Array [
      49,
      53,
      56,
      58,
      61,
      65,
      68,
      70,
    ],
    "chordName": "Db6",
    "dur": 480,
    "isRest": false,
    "next": 320,
    "time": 0,
  },
  Object {
    "chord": Array [
      49,
      53,
      56,
      58,
      61,
      65,
      68,
      70,
    ],
    "chordName": "Db6",
    "dur": 480,
    "isRest": false,
    "next": 640,
    "time": 320,
  },
  Object {
    "chord": Array [
      49,
      53,
      56,
      58,
      61,
      65,
      68,
      70,
    ],
    "chordName": "Db6",
    "dur": 480,
    "isRest": false,
    "next": 960,
    "time": 640,
  },
  Object {
    "chord": Array [
      47,
      54,
      56,
      63,
    ],
    "chordName": "B6",
    "dur": 480,
    "isRest": false,
    "next": 1280,
    "time": 960,
  },
  Object {
    "chord": Array [
      47,
      54,
      56,
      63,
    ],
    "chordName": "B6",
    "dur": 480,
    "isRest": false,
    "next": 1600,
    "time": 1280,
  },
  Object {
    "chord": Array [
      47,
      54,
      56,
      63,
    ],
    "chordName": "B6",
    "dur": 480,
    "isRest": false,
    "next": 1920,
    "time": 1600,
  },
  Object {
    "chord": Array [
      80,
      83,
      87,
    ],
    "chordName": "G#m6m",
    "dur": 480,
    "isRest": false,
    "next": 2240,
    "time": 1920,
  },
  Object {
    "chord": Array [
      80,
      83,
      87,
    ],
    "chordName": "G#m6m",
    "dur": 480,
    "isRest": false,
    "next": 2560,
    "time": 2240,
  },
  Object {
    "chord": Array [
      80,
      83,
      87,
    ],
    "chordName": "G#m6m",
    "dur": 480,
    "isRest": false,
    "next": 2880,
    "time": 2560,
  },
  Object {
    "chord": Array [
      59,
      66,
    ],
    "chordName": "B6",
    "dur": 480,
    "isRest": false,
    "next": 3200,
    "time": 2880,
  },
  Object {
    "chord": Array [
      59,
      66,
    ],
    "chordName": "B6",
    "dur": 480,
    "isRest": false,
    "next": 3520,
    "time": 3200,
  },
  Object {
    "chord": Array [
      59,
      66,
    ],
    "chordName": "B6",
    "dur": 480,
    "isRest": false,
    "next": 3840,
    "time": 3520,
  },
  Object {
    "chord": Array [
      58,
      59,
      63,
      66,
    ],
    "chordName": "D#m6m",
    "dur": 480,
    "isRest": false,
    "next": 4160,
    "time": 3840,
  },
  Object {
    "chord": Array [
      58,
      59,
      63,
      66,
    ],
    "chordName": "D#m6m",
    "dur": 480,
    "isRest": false,
    "next": 4480,
    "time": 4160,
  },
  Object {
    "chord": Array [
      58,
      59,
      63,
      66,
    ],
    "chordName": "D#m6m",
    "dur": 480,
    "isRest": false,
    "next": 4800,
    "time": 4480,
  },
  Object {
    "chord": Array [
      56,
      63,
      64,
    ],
    "chordName": "Abm6m",
    "dur": 480,
    "isRest": false,
    "next": 5120,
    "time": 4800,
  },
  Object {
    "chord": Array [
      56,
      63,
      64,
    ],
    "chordName": "Abm6m",
    "dur": 480,
    "isRest": false,
    "next": 5440,
    "time": 5120,
  },
  Object {
    "chord": Array [
      56,
      63,
      64,
    ],
    "chordName": "Abm6m",
    "dur": 480,
    "isRest": false,
    "next": 5760,
    "time": 5440,
  },
  Object {
    "chord": Array [
      49,
      52,
      56,
    ],
    "chordName": "Dbm6m",
    "dur": 480,
    "isRest": false,
    "next": 6080,
    "time": 5760,
  },
  Object {
    "chord": Array [
      49,
      52,
      56,
    ],
    "chordName": "Dbm6m",
    "dur": 480,
    "isRest": false,
    "next": 6400,
    "time": 6080,
  },
  Object {
    "chord": Array [
      49,
      52,
      56,
    ],
    "chordName": "Dbm6m",
    "dur": 480,
    "isRest": false,
    "next": 6720,
    "time": 6400,
  },
  Object {
    "chord": Array [
      83,
      90,
      86,
      91,
    ],
    "chordName": "Bm6m",
    "dur": 480,
    "isRest": false,
    "next": 7040,
    "time": 6720,
  },
  Object {
    "chord": Array [
      83,
      90,
      86,
      91,
    ],
    "chordName": "Bm6m",
    "dur": 480,
    "isRest": false,
    "next": 7360,
    "time": 7040,
  },
  Object {
    "chord": Array [
      83,
      90,
      86,
      91,
    ],
    "chordName": "Bm6m",
    "dur": 480,
    "isRest": false,
    "next": 7840,
    "time": 7360,
  },
]
`;
